--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,7 +14,7 @@ body{
     background-color: #147ec0;
     grid-row: 1/13;
     display: grid;
-    grid-template-rows:repeat(1,2fr) repeat(9,1fr);    
+    grid-template-rows:repeat(1,80px) repeat(9,30PX); 
 
 }
 
@@ -26,10 +26,8 @@ body{
     display: grid;
     display: flex;
     place-items: center;
+    cursor: pointer;
 }
 .sidebarchild > p {
     padding-left: 5px;
-}
-.sidebar > img{
-    filter: invert(100%);
 }
